test: surefire config